crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_release_json_scenarios_match_snapshot@stable_major_json.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
expression: redacted
---
{
  "changed_files": [
    "crates/app/Cargo.toml",
    "crates/core/Cargo.toml"
  ],
  "changelogs": [],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actor_profiles": false,
          "commit_web_urls": false,
          "issue_comments": false,
          "related_issues": false,
          "review_request_lookup": false
        },
        "host": null,
        "introduced": null,
        "last_updated": null,
        "provider": "generic_git",
        "related_issues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "breaking change in core",
      "targets": [
        {
          "bump": "major",
          "change_type": "major",
          "evidence_refs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release",
  "deleted_changesets": [],
  "dry_run": true,
  "group_version": null,
  "package_publications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "app",
      "registry": "crates_io",
      "trusted_publishing": {
        "enabled": true,
        "environment": null,
        "mode": "required",
        "repository": null,
        "workflow": null
      },
      "version": "1.0.1"
    },
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trusted_publishing": {
        "enabled": true,
        "environment": null,
        "mode": "required",
        "repository": null,
        "workflow": null
      },
      "version": "2.0.0"
    }
  ],
  "plan": {
    "compatibility_evidence": [],
    "decisions": [
      {
        "bump": "patch",
        "package": "cargo:crates/app/Cargo.toml",
        "planned_version": "1.0.1",
        "reasons": [
          "depends on `cargo:crates/core/Cargo.toml`"
        ],
        "trigger": "transitive-dependency",
        "upstream_sources": [
          "cargo:crates/core/Cargo.toml"
        ]
      },
      {
        "bump": "major",
        "package": "cargo:crates/core/Cargo.toml",
        "planned_version": "2.0.0",
        "reasons": [
          "breaking change in core"
        ],
        "trigger": "direct-change",
        "upstream_sources": [
          "cargo:crates/core/Cargo.toml"
        ]
      }
    ],
    "groups": [],
    "unresolved_items": [],
    "warnings": [],
    "workspace_root": "."
  },
  "release_targets": [
    {
      "id": "app",
      "kind": "package",
      "members": [
        "app"
      ],
      "release": false,
      "rendered_changelog_title": "app 1.0.1 ([DATE])",
      "rendered_title": "app v1.0.1 ([DATE])",
      "tag": false,
      "tag_name": "app/v1.0.1",
      "version": "1.0.1",
      "version_format": "namespaced"
    },
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": false,
      "rendered_changelog_title": "core 2.0.0 ([DATE])",
      "rendered_title": "core v2.0.0 ([DATE])",
      "tag": false,
      "tag_name": "core/v2.0.0",
      "version": "2.0.0",
      "version_format": "namespaced"
    }
  ],
  "released_packages": [
    "workflow-app",
    "workflow-core"
  ],
  "version": null
}
