crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_release_text_scenarios_match_snapshot@pre_stable_grouped_major_text.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
• Release preview · 2 packages · dry-run, no files were changed

Releases
  sdk  v0.2.0  group · tag · release

Packages (2)
  workflow-app, workflow-core

Changed files (3)
  Cargo.toml
  crates/app/Cargo.toml
  crates/core/Cargo.toml

Manifest  .monochange/local/release-manifest.json

Log
  skipped release record: dry-run preview (pass `--release-json` to write release.json)
