crates/monochange/tests/snapshots/pre_stable_versioning__pre_stable_release_text_scenarios_match_snapshot@stable_major_text.snap
---
source: crates/monochange/tests/pre_stable_versioning.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
• Release preview · 2 packages · dry-run, no files were changed

Releases
  app   app/v1.0.1   package
  core  core/v2.0.0  package

Packages (2)
  workflow-app, workflow-core

Changed files (2)
  crates/app/Cargo.toml
  crates/core/Cargo.toml

Manifest  .monochange/local/release-manifest.json

Log
  skipped release record: dry-run preview (pass `--release-json` to write release.json)
